--- a/training.html
+++ b/training.html
@@ -7,20 +7,6 @@
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-    <style>
-        .section {
-            background-color: #f2f2f2;
-            padding: 20px;
-            margin-bottom: 20px;
-            border-left: 5px solid #FFA500;
-            border-radius: 8px;
-            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-        }
-
-        .section h2 {
-            color: #FFA500;
-        }
-    </style>
 </head>
 <body>
 
@@ -101,44 +87,7 @@
     <p>&copy; 2025 Operation Department - ANAVIA</p>
 </footer>
 
-<script>
-    function toggleMenu() {
-        document.querySelector('nav ul').classList.toggle('active');
-    }
-
-    const backToTopButton = document.getElementById('back-to-top');
-
-    window.onscroll = function () {
-        if (document.body.scrollTop > 300 || document.documentElement.scrollTop > 300) {
-            backToTopButton.style.display = "block";
-        } else {
-            backToTopButton.style.display = "none";
-        }
-    };
-
-    function scrollToTop() {
-        window.scrollTo({ top: 0, behavior: 'smooth' });
-    }
-</script>
-
-<style>
-    #back-to-top {
-        position: fixed;
-        bottom: 20px;
-        right: 20px;
-        background-color: #FFA500;
-        color: white;
-        border: none;
-        padding: 10px;
-        border-radius: 50%;
-        cursor: pointer;
-        display: none;
-    }
-
-    #back-to-top:hover {
-        background-color: #e69500;
-    }
-</style>
+<script src="js/scripts.js"></script>
 
 </body>
 </html>
